# sophia

./: .gitignore  README.md  RESUME_STATUS.md  install.sh  pyproject.toml
scripts/: run_tests.py  smoke.py
sophia/: __init__.py  __main__.py
sophia/adapters/: fake_worker.py
sophia/adapters/codex/: adapter.py
sophia/adapters/notifier/: email_smtp.py  fake.py  stdout.py
sophia/adapters/resource/: fake.py  system.py
sophia/adapters/retriever/: embedding.py
sophia/adapters/thinker/: claude_cli.py
sophia/core/loop/: scheduler.py
sophia/core/manager/: anticipation.py  premise.py  reporter.py  synthesis.py
sophia/core/portfolio/: digest.py  portfolio.py  project.py
sophia/core/state/: handoff.py
sophia/ports/: notifier.py  resource.py  thinker.py
sophia/prompts/: templates.py
sophia/ui/: render.py  tui.py
teamlead/: __init__.py  __main__.py
teamlead/adapters/: artifacts.py  isolation.py
teamlead/adapters/claude_code/: adapter.py
teamlead/adapters/retriever/: noop.py
teamlead/adapters/thinker/: anthropic_thinker.py  fake.py
teamlead/core/loop/: scheduler.py
teamlead/core/manager/: director.py  premise.py
teamlead/ports/: retriever.py  thinker.py  worker.py
teamlead/prompts/: templates.py
tests/: conftest.py  test_adapter.py  test_anticipation.py  test_artifacts.py  test_claude_cli_thinker.py  test_codex_adapter.py  test_director.py  test_handoff.py  test_isolation.py  test_notifier.py  test_portfolio.py  test_premise.py  test_reporter.py  test_resource.py  test_resource_wiring.py  test_resume.py  test_scheduler.py  test_synthesis.py
(+1 files in other folders)
